Add gravirun rhythm runner and refresh arcade visuals

--- a/ludka/ludka.html
+++ b/ludka/ludka.html
@@ -138,6 +138,14 @@
         <div class="badge">→</div>
       </a>
 
+      <a class="cardbtn" href="/gravirun">
+        <div>
+          <h3>🚀 Грави-ритм</h3>
+          <p>Перестраивайся, лови кристаллы и жми буст</p>
+        </div>
+        <div class="badge">→</div>
+      </a>
+
       <a class="cardbtn" href="/rating">
         <div>
           <h3>🏆 Рейтинг</h3>
