--- a/minigames/snake.html
+++ b/minigames/snake.html
@@ -200,22 +200,54 @@
     ctx.fillRect(food.x*cellSize+2, food.y*cellSize+2, cellSize-4, cellSize-4);
     ctx.shadowBlur = 0;
 
-    // snake
+    // snake with soft body and accented head/tail
+    ctx.lineJoin = 'round';
+    ctx.lineCap = 'round';
+
     snake.forEach((segment, idx)=>{
       const prev = previousSnake[idx] || segment;
-      const x = lerp(prev.x, segment.x, progress) * cellSize;
-      const y = lerp(prev.y, segment.y, progress) * cellSize;
+      const x = lerp(prev.x, segment.x, progress) * cellSize + cellSize/2;
+      const y = lerp(prev.y, segment.y, progress) * cellSize + cellSize/2;
       const isHead = idx === 0;
-      const grad = ctx.createLinearGradient(x,y,x,y+cellSize);
-      grad.addColorStop(0,isHead?'#34d399':'#3b82f6');
-      grad.addColorStop(1,isHead?'#10b981':'#1d4ed8');
+      const isTail = idx === snake.length - 1;
+      const size = isHead ? cellSize * 0.9 : cellSize * 0.78;
+
+      const grad = ctx.createRadialGradient(x-3,y-3,4,x,y,size/1.4);
+      grad.addColorStop(0, isHead ? '#34d399' : '#1d4ed8');
+      grad.addColorStop(1, isHead ? '#0ea361' : '#0b58d0');
       ctx.fillStyle = grad;
-      ctx.strokeStyle = 'rgba(255,255,255,0.06)';
-      ctx.lineWidth = 1.5;
+      ctx.strokeStyle = 'rgba(255,255,255,0.12)';
+      ctx.lineWidth = isHead ? 3 : 2;
       ctx.beginPath();
-      ctx.roundRect(x+1.5, y+1.5, cellSize-3, cellSize-3, 5);
+      ctx.ellipse(x, y, size/1.8, size/2, 0, 0, Math.PI * 2);
       ctx.fill();
       ctx.stroke();
+
+      if(isHead){
+        // eyes
+        ctx.fillStyle = '#0b0f14';
+        const eyeOffset = cellSize*0.15;
+        ctx.beginPath();
+        ctx.arc(x + eyeOffset, y - eyeOffset/1.2, 3, 0, Math.PI*2);
+        ctx.arc(x + eyeOffset, y + eyeOffset/1.2, 3, 0, Math.PI*2);
+        ctx.fill();
+        // tongue highlight
+        ctx.strokeStyle = '#f87171';
+        ctx.lineWidth = 1.5;
+        ctx.beginPath();
+        ctx.moveTo(x + size/2.2, y);
+        ctx.lineTo(x + size/1.5, y + 3);
+        ctx.moveTo(x + size/2.2, y);
+        ctx.lineTo(x + size/1.5, y - 3);
+        ctx.stroke();
+      }else if(isTail){
+        ctx.strokeStyle = '#60a5fa';
+        ctx.lineWidth = 2;
+        ctx.beginPath();
+        ctx.moveTo(x - size/2.1, y);
+        ctx.lineTo(x - size/1.3, y + 2*Math.sin(performance.now()/160));
+        ctx.stroke();
+      }
     });
   }
 
