--- a/ludka/gravirun.html
+++ b/ludka/gravirun.html
@@ -6,6 +6,7 @@
   <title>Грави-ритм — FirstClub</title>
   <script src="https://telegram.org/js/telegram-web-app.js"></script>
   <script src="/webapp_guard.js"></script>
+  <script src="/ludka/gravirun_logic_adapter.js"></script>
   <style>
     :root{
       --bg:#05070c; --bg2:#0a0f1d; --panel:#0d1117;
@@ -116,9 +117,6 @@
         </div>
         <div style="width:100%;max-width:840px;">
           <div id="status" class="status idle">Уворачивайся от шипов, собирай кристаллы и копи буст.</div>
-          <p class="note">Логика симуляции вынесена в <strong>PHP</strong> и <strong>C++</strong> файлы — ими можно пользоваться
-            для автотестов или симуляторов бота, чтобы увериться в честности. Каждый буст даёт краткий щит и удвоенные очки.
-            Победа засчитывается после 25 собранных кристаллов, поражение — при потере всех жизней.</p>
         </div>
       </section>
 
@@ -131,8 +129,6 @@
           <div class="legend-row"><span class="legend-swatch" style="background:#f59e0b;"></span><strong>Буст</strong> —
             щит на 1.5 сек и двойные очки</div>
         </div>
-        <p class="note">Передвижение мгновенное и привязано к четырём дорожкам. На телефонах доступны крупные кнопки
-          управления, на десктопе — стрелки и пробел. Скорость потока постепенно растёт, заставляя перестраиваться быстрее.</p>
       </section>
     </div>
   </div>
@@ -160,17 +156,10 @@
   const playerY = board.height * 0.8;
   const goal = 25;
 
-  let hazards = [];
-  let playerLane = 1;
-  let running = false;
-  let lives = 3;
-  let score = 0;
+  let cppState = GravirunCpp.makeState();
   let streak = 0;
+  let running = false;
   let lastTime = 0;
-  let spawnTimer = 0;
-  let spawnDelay = 0.95;
-  let boostReady = true;
-  let boostTimer = 0;
   let rafId = null;
   let resultSent = false;
 
@@ -187,16 +176,9 @@
   }
 
   function resetGame(){
-    hazards = [];
-    playerLane = 1;
-    running = false;
-    lives = 3;
-    score = 0;
+    cppState = GravirunCpp.makeState();
     streak = 0;
-    spawnTimer = 0;
-    spawnDelay = 0.95;
-    boostReady = true;
-    boostTimer = 0;
+    running = false;
     resultSent = false;
     updateUi();
     setStatus('Нажми «Играть» или стрелки, чтобы стартовать.', 'idle');
@@ -204,16 +186,10 @@
   }
 
   function updateUi(){
-    scoreEl.textContent = score;
-    livesEl.textContent = lives;
+    scoreEl.textContent = cppState.score;
+    livesEl.textContent = cppState.lives;
     streakEl.textContent = streak;
-    boostEl.textContent = boostReady ? 'готов' : 'заряжается';
-  }
-
-  function spawnObject(){
-    const typeRand = Math.random();
-    const type = typeRand < 0.68 ? 'crystal' : (typeRand < 0.87 ? 'spike' : 'boost');
-    hazards.push({lane: Math.floor(Math.random()*lanes.length), y: -30, speed: 160 + Math.random()*90, type});
+    boostEl.textContent = cppState.boostTimer > 0 ? 'активен' : 'нет';
   }
 
   function draw(progress){
@@ -237,50 +213,51 @@
     ctx.fillStyle = 'rgba(255,255,255,0.05)';
     ctx.fillRect(16, playerY-36, board.width-32, 70);
 
-    hazards.forEach(obj=>{
+    cppState.objects.forEach(obj=>{
       const laneX = lanes[obj.lane];
       const size = 30;
-      if(obj.type === 'crystal'){
-        const g = ctx.createLinearGradient(laneX-size/2, obj.y-size/2, laneX+size/2, obj.y+size/2);
+      const objY = obj.y * board.height;
+      if(obj.type === 'c'){
+        const g = ctx.createLinearGradient(laneX-size/2, objY-size/2, laneX+size/2, objY+size/2);
         g.addColorStop(0,'#60a5fa'); g.addColorStop(1,'#22d3ee');
         ctx.fillStyle = g;
         ctx.shadowColor = '#60a5fa';
         ctx.shadowBlur = 10;
         ctx.beginPath();
-        ctx.moveTo(laneX, obj.y-size/1.2);
-        ctx.lineTo(laneX+size/1.8, obj.y);
-        ctx.lineTo(laneX, obj.y+size/1.2);
-        ctx.lineTo(laneX-size/1.8, obj.y);
+        ctx.moveTo(laneX, objY-size/1.2);
+        ctx.lineTo(laneX+size/1.8, objY);
+        ctx.lineTo(laneX, objY+size/1.2);
+        ctx.lineTo(laneX-size/1.8, objY);
         ctx.closePath();
         ctx.fill();
         ctx.shadowBlur = 0;
-      }else if(obj.type === 'spike'){
+      }else if(obj.type === 's'){
         ctx.fillStyle = '#ef4444';
         ctx.beginPath();
-        ctx.moveTo(laneX, obj.y-size/1.4);
-        ctx.lineTo(laneX+size/2.4, obj.y+size/1.4);
-        ctx.lineTo(laneX-size/2.4, obj.y+size/1.4);
+        ctx.moveTo(laneX, objY-size/1.4);
+        ctx.lineTo(laneX+size/2.4, objY+size/1.4);
+        ctx.lineTo(laneX-size/2.4, objY+size/1.4);
         ctx.closePath();
         ctx.fill();
       }else{
         ctx.fillStyle = '#f59e0b';
         ctx.beginPath();
-        ctx.arc(laneX, obj.y, size/2.6, 0, Math.PI*2);
+        ctx.arc(laneX, objY, size/2.6, 0, Math.PI*2);
         ctx.fill();
         ctx.strokeStyle = 'rgba(255,255,255,0.25)';
         ctx.lineWidth = 2;
         ctx.beginPath();
-        ctx.arc(laneX, obj.y, size/2.6+4, 0, Math.PI*2);
+        ctx.arc(laneX, objY, size/2.6+4, 0, Math.PI*2);
         ctx.stroke();
       }
     });
 
-    const px = lanes[playerLane];
+    const px = lanes[cppState.playerLane];
     const bodyGrad = ctx.createLinearGradient(px-30, playerY-10, px+30, playerY+10);
     bodyGrad.addColorStop(0,'#8b5cf6'); bodyGrad.addColorStop(1,'#22d3ee');
     ctx.fillStyle = bodyGrad;
-    ctx.shadowColor = boostTimer>0 ? '#f59e0b' : '#8b5cf6';
-    ctx.shadowBlur = boostTimer>0 ? 18 : 8;
+    ctx.shadowColor = cppState.boostTimer>0 ? '#f59e0b' : '#8b5cf6';
+    ctx.shadowBlur = cppState.boostTimer>0 ? 18 : 8;
     ctx.beginPath();
     ctx.roundRect(px-26, playerY-20, 52, 40, 12);
     ctx.fill();
@@ -294,73 +271,42 @@
   }
 
   function moveLane(delta){
-    playerLane = Math.min(lanes.length-1, Math.max(0, playerLane + delta));
-    setStatus('Линия: '+(playerLane+1), '');
+    cppState.playerLane = Math.min(lanes.length-1, Math.max(0, cppState.playerLane + delta));
+    setStatus('Линия: '+(cppState.playerLane+1), '');
   }
 
   function activateBoost(){
-    if(!boostReady) return;
-    boostReady = false;
-    boostTimer = 1.5;
-    showToast('Щит активирован');
-    setStatus('Щит на 1.5 сек — очки удваиваются', 'win');
+    showToast('Буст включается автоматически при сборе');
+    setStatus('Лови буст — он включит щит сам', 'idle');
   }
 
-  function step(dt){
-    spawnTimer += dt;
-    if(spawnTimer >= spawnDelay){
-      spawnTimer = 0;
-      spawnDelay = Math.max(0.45, spawnDelay * 0.985);
-      spawnObject();
-    }
-
-    hazards.forEach(h=>{ h.y += h.speed * dt; });
-    hazards = hazards.filter(h=> h.y < board.height + 40);
-
-    if(boostTimer > 0){
-      boostTimer -= dt;
-      if(boostTimer <= 0){
-        setStatus('Щит погас. Держи темп!', 'idle');
-      }
-    }
-
-    hazards.forEach(obj=>{
-      if(obj.lane !== playerLane) return;
-      if(Math.abs(obj.y - playerY) <= 28){
-        if(obj.type === 'crystal'){
-          streak += 1;
-          const mult = boostTimer>0 ? 2 : 1;
-          score += 1 * mult;
-          showToast(`+${mult} очко`);
-          obj.hit = true;
-          if(score >= goal){
-            finish('win','Аттрактор заряжен! +1 очко рейтинга.');
-          }
-        }else if(obj.type === 'spike'){
-          if(boostTimer>0){
-            obj.hit = true;
-            showToast('Щит спасает');
-          }else{
-            obj.hit = true;
-            lives -= 1;
-            streak = 0;
-            setStatus('Больной контакт! Осталось жизней: '+lives, 'lose');
-            showToast('−1 жизнь');
-            if(lives <= 0){
-              finish('loss','Корабль разбит. Попробуй ещё.');
-            }
-          }
-        }else if(obj.type === 'boost'){
-          obj.hit = true;
-          boostReady = true;
-          showToast('Буст готов');
-          setStatus('Буст зарядился — прожми SPACE или кнопку.', 'win');
+  function applyCppEvents(events){
+    events.forEach(ev=>{
+      if(ev.type === 'crystal'){
+        streak += 1;
+        showToast(`+${ev.points} очко`);
+        if(cppState.score >= goal){
+          finish('win','Аттрактор заряжен! +1 очко рейтинга.');
         }
+      }else if(ev.type === 'spike'){
+        if(ev.lifeLost){
+          streak = 0;
+          setStatus('Больной контакт! Осталось жизней: '+cppState.lives, 'lose');
+          showToast('−1 жизнь');
+          if(cppState.lives <= 0){
+            finish('loss','Корабль разбит. Попробуй ещё.');
+          }
+        }else{
+          showToast('Щит спасает');
+        }
+      }else if(ev.type === 'boost'){
+        showToast('Буст активирован');
+        setStatus('Щит на 1.5 сек — очки удваиваются', 'win');
       }
     });
-    hazards = hazards.filter(h=>!h.hit);
-
-    updateUi();
+    if(!events.length && cppState.boostTimer <= 0 && running){
+      setStatus('Держи курс и собирай кристаллы.', '');
+    }
   }
 
   function gameLoop(ts){
@@ -368,7 +314,10 @@
     const dt = Math.min(0.033, (ts-lastTime)/1000);
     lastTime = ts;
     if(running){
-      step(dt);
+      const result = GravirunCpp.gravirunStepCpp(cppState, dt, {boardHeight: board.height});
+      cppState = result.state;
+      applyCppEvents(result.events);
+      updateUi();
       draw(dt);
       rafId = requestAnimationFrame(gameLoop);
     }
@@ -378,7 +327,6 @@
     if(running) return;
     running = true;
     lastTime = 0;
-    spawnTimer = 0;
     setStatus('Держи курс и собирай кристаллы.', '');
     if(rafId) cancelAnimationFrame(rafId);
     rafId = requestAnimationFrame(gameLoop);
