--- a/minigames/snake.html
+++ b/minigames/snake.html
@@ -6,6 +6,7 @@
   <title>Змейка — FirstClub</title>
   <script src="https://telegram.org/js/telegram-web-app.js"></script>
   <script src="/webapp_guard.js"></script>
+  <script src="/minigames/snake_logic_adapter.js"></script>
   <style>
     :root{
       --bg:#0a0d12; --bg2:#0e1117; --panel:#0d1117;
@@ -142,27 +143,13 @@
     statusEl.textContent = text;
   }
 
-  function spawnFood(){
-    const occupied = new Set(snake.map(p=>`${p.x},${p.y}`));
-    let attempts = 0;
-    while(attempts < 200){
-      const fx = Math.floor(Math.random()*gridSize);
-      const fy = Math.floor(Math.random()*gridSize);
-      if(!occupied.has(`${fx},${fy}`)){
-        food = {x:fx,y:fy};
-        return;
-      }
-      attempts++;
-    }
-  }
-
   function resetGame(){
     if(loopId){ cancelAnimationFrame(loopId); loopId=null; }
     snake = [{x:10,y:10}];
     previousSnake = snake.map(s=>({...s}));
     dir = {x:1,y:0};
     nextDir = {x:1,y:0};
-    spawnFood();
+    food = SnakeCpp.placeFood(snake, gridSize);
     running = false;
     resultSent = false;
     accumulator = 0;
@@ -200,80 +187,62 @@
     ctx.fillRect(food.x*cellSize+2, food.y*cellSize+2, cellSize-4, cellSize-4);
     ctx.shadowBlur = 0;
 
-    // snake with soft body and accented head/tail
-    ctx.lineJoin = 'round';
-    ctx.lineCap = 'round';
-
-    snake.forEach((segment, idx)=>{
+    const points = snake.map((segment, idx)=>{
       const prev = previousSnake[idx] || segment;
-      const x = lerp(prev.x, segment.x, progress) * cellSize + cellSize/2;
-      const y = lerp(prev.y, segment.y, progress) * cellSize + cellSize/2;
-      const isHead = idx === 0;
-      const isTail = idx === snake.length - 1;
-      const size = isHead ? cellSize * 0.9 : cellSize * 0.78;
+      return {
+        x: lerp(prev.x, segment.x, progress) * cellSize + cellSize/2,
+        y: lerp(prev.y, segment.y, progress) * cellSize + cellSize/2
+      };
+    });
 
-      const grad = ctx.createRadialGradient(x-3,y-3,4,x,y,size/1.4);
-      grad.addColorStop(0, isHead ? '#34d399' : '#1d4ed8');
-      grad.addColorStop(1, isHead ? '#0ea361' : '#0b58d0');
-      ctx.fillStyle = grad;
-      ctx.strokeStyle = 'rgba(255,255,255,0.12)';
-      ctx.lineWidth = isHead ? 3 : 2;
+    if(points.length){
+      const head = points[0];
+      const tail = points[points.length-1];
+      const bodyGradient = ctx.createLinearGradient(head.x, head.y, tail.x, tail.y);
+      bodyGradient.addColorStop(0, '#34d399');
+      bodyGradient.addColorStop(1, '#1d4ed8');
+
+      ctx.lineJoin = 'round';
+      ctx.lineCap = 'round';
+      ctx.strokeStyle = bodyGradient;
+      ctx.lineWidth = cellSize * 0.9;
+      ctx.shadowColor = 'rgba(52,211,153,0.35)';
+      ctx.shadowBlur = 10;
+
       ctx.beginPath();
-      ctx.ellipse(x, y, size/1.8, size/2, 0, 0, Math.PI * 2);
-      ctx.fill();
+      ctx.moveTo(head.x, head.y);
+      for(let i=1;i<points.length;i++){
+        ctx.lineTo(points[i].x, points[i].y);
+      }
       ctx.stroke();
 
-      if(isHead){
-        // eyes
-        ctx.fillStyle = '#0b0f14';
-        const eyeOffset = cellSize*0.15;
-        ctx.beginPath();
-        ctx.arc(x + eyeOffset, y - eyeOffset/1.2, 3, 0, Math.PI*2);
-        ctx.arc(x + eyeOffset, y + eyeOffset/1.2, 3, 0, Math.PI*2);
-        ctx.fill();
-        // tongue highlight
-        ctx.strokeStyle = '#f87171';
-        ctx.lineWidth = 1.5;
-        ctx.beginPath();
-        ctx.moveTo(x + size/2.2, y);
-        ctx.lineTo(x + size/1.5, y + 3);
-        ctx.moveTo(x + size/2.2, y);
-        ctx.lineTo(x + size/1.5, y - 3);
-        ctx.stroke();
-      }else if(isTail){
-        ctx.strokeStyle = '#60a5fa';
-        ctx.lineWidth = 2;
-        ctx.beginPath();
-        ctx.moveTo(x - size/2.1, y);
-        ctx.lineTo(x - size/1.3, y + 2*Math.sin(performance.now()/160));
-        ctx.stroke();
-      }
-    });
+      ctx.shadowBlur = 0;
+      ctx.fillStyle = '#0b0f14';
+      const eyeOffset = cellSize * 0.2;
+      ctx.beginPath();
+      ctx.arc(head.x + eyeOffset, head.y - eyeOffset/1.1, 3, 0, Math.PI*2);
+      ctx.arc(head.x + eyeOffset, head.y + eyeOffset/1.1, 3, 0, Math.PI*2);
+      ctx.fill();
+    }
   }
-
-  function samePos(a,b){ return a.x===b.x && a.y===b.y; }
 
   function step(){
     previousSnake = snake.map(s=>({...s}));
     dir = {...nextDir};
-    const head = {x:snake[0].x + dir.x, y:snake[0].y + dir.y};
-
-    // collision with wall or self
-    if(head.x<0 || head.y<0 || head.x>=gridSize || head.y>=gridSize || snake.some(s=>samePos(s, head))){
+    const result = SnakeCpp.snakeStepCpp(snake, dir, food, gridSize);
+    if(result.dead){
       endGame('loss','Столкновение. Попробуй ещё раз!');
       return;
     }
 
-    snake.unshift(head);
-    if(samePos(head, food)){
+    snake = result.snake.map(s=>({...s}));
+    food = {...result.food};
+    if(result.ate){
       scoreEl.textContent = Number(scoreEl.textContent) + 1;
-      spawnFood();
       if(snake.length >= TARGET_LENGTH){
         endGame('win','Победа! +1 очко за длину змейки.');
         return;
       }
-    }else{
-      snake.pop();
     }
 
     lengthEl.textContent = snake.length;
