Move rhythm games into minigames and update routing

--- a/ludka/ludka.html
+++ b/ludka/ludka.html
@@ -130,17 +130,17 @@
         <div class="badge">→</div>
       </a>
 
-      <a class="cardbtn" href="/pulse">
+      <a class="cardbtn" href="/neonbeat">
         <div>
-          <h3>🌌 Неоновый ритм</h3>
+          <h3>🌌 Неоновый бит</h3>
           <p>Поймай ноты в такт и собери комбо</p>
         </div>
         <div class="badge">→</div>
       </a>
 
-      <a class="cardbtn" href="/gravirun">
+      <a class="cardbtn" href="/gravidrive">
         <div>
-          <h3>🚀 Грави-ритм</h3>
+          <h3>🚀 Грави-драйв</h3>
           <p>Перестраивайся, лови кристаллы и жми буст</p>
         </div>
         <div class="badge">→</div>
