--- a/ludka/rating.html
+++ b/ludka/rating.html
@@ -130,7 +130,7 @@
           <option value="dice">Кости</option>
           <option value="bj">Блэкджек</option>
           <option value="slot">Слоты</option>
-          <option value="pulse">Неоновый ритм</option>
+          <option value="pulse">Неоновый бит</option>
         </select>
 
         <label class="muted">Сортировка:</label>
