--- a/minigames/minigames.html
+++ b/minigames/minigames.html
@@ -73,21 +73,21 @@
           <div>→</div>
         </a>
 
-        <button class="cardbtn disabled" type="button" data-disabled="true">
+        <a class="cardbtn" href="/neonbeat">
           <div>
-            <h3>🏃‍♂️ Мистер бегун</h3>
-            <p>В разработке</p>
+            <h3>🌌 Неоновый бит</h3>
+            <p>Лови ноты в зоне подсветки и удерживай серию</p>
           </div>
-          <div>…</div>
-        </button>
+          <div>→</div>
+        </a>
 
-        <button class="cardbtn disabled" type="button" data-disabled="true">
+        <a class="cardbtn" href="/gravidrive">
           <div>
-            <h3>🎮 Мини‑игра 3</h3>
-            <p>В разработке</p>
+            <h3>🚀 Грави-драйв</h3>
+            <p>Перестраивайся между лучами, собирай кристаллы и жми буст</p>
           </div>
-          <div>…</div>
-        </button>
+          <div>→</div>
+        </a>
 
         <button class="cardbtn disabled" type="button" data-disabled="true">
           <div>
