--- a/minigames/minigames.html
+++ b/minigames/minigames.html
@@ -89,13 +89,21 @@
           <div>→</div>
         </a>
 
-        <button class="cardbtn disabled" type="button" data-disabled="true">
+        <a class="cardbtn" href="/rpg">
           <div>
-            <h3>🎯 Мини‑игра 4</h3>
-            <p>Скоро</p>
+            <h3>🗺️ RPG</h3>
+            <p>Раздел с прогрессией и квестами (подготовка)</p>
           </div>
-          <div>…</div>
-        </button>
+          <div>→</div>
+        </a>
+
+        <a class="cardbtn" href="/kd">
+          <div>
+            <h3>⏳ КД игра</h3>
+            <p>Новый режим с откатом и бонусами — скоро</p>
+          </div>
+          <div>→</div>
+        </a>
       </div>
     </section>
   </div>
