--- a/minigames/neonbeat.html
+++ b/minigames/neonbeat.html
@@ -158,6 +158,7 @@
 
   let notes = [];
   let running = false;
+  let gameOver = false;
   let lives = 3;
   let score = 0;
   let streak = 0;
@@ -201,6 +202,7 @@
   function resetGame(){
     notes = [];
     running = false;
+    gameOver = false;
     lives = 3;
     score = 0;
     streak = 0;
@@ -341,6 +343,9 @@
 
   function startGame(){
     if(running) return;
+    if(gameOver){
+      resetGame();
+    }
     running = true;
     lastTime = 0;
     spawnTimer = 0;
@@ -353,6 +358,9 @@
     running = false;
     if(rafId) cancelAnimationFrame(rafId);
     setStatus(message, result==='win'?'win':'lose');
+    if(result === 'loss'){
+      gameOver = true;
+    }
     reportResult(result);
   }
 
