--- a/minigames/minigames.html
+++ b/minigames/minigames.html
@@ -92,15 +92,7 @@
         <a class="cardbtn" href="/rpg">
           <div>
             <h3>🗺️ RPG</h3>
-            <p>Раздел с прогрессией и квестами (подготовка)</p>
-          </div>
-          <div>→</div>
-        </a>
-
-        <a class="cardbtn" href="/kd">
-          <div>
-            <h3>⏳ КД игра</h3>
-            <p>Новый режим с откатом и бонусами — скоро</p>
+            <p>Собирай ресурсы, следи за инвентарём и профилем</p>
           </div>
           <div>→</div>
         </a>
